--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ java {
 
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.6.3")
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 repositories {
